# ohm

./: Cargo.toml  README.md
.github/workflows/: pipeline.yml
src/: band.rs  lib.rs  main.rs  ohm.rs  resistance.rs
